# phi

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  renderdoc_settings.cap  todo  voxel_world_editor_renderdoc_settings.cap
data/: basic_materials.yaml  materials.ods  materials.pbm  materials.yaml
data/effects/: fire.effect  fireworks.effect  rain.effect  snow.effect
data/maps/: testmap.vmap
data/models/: dragon.pvox  dragon.vobj  mushroom.pvox  mushroom.vobj  teapot.pvox  teapot.vobj  treehouse.pvox
data/textures/: alpha_cleanup.sh  alpha_convert.sh
phi/: phi.hpp
phi/core/: app.cpp  app.hpp  debug.cpp  debug.hpp  file.cpp  file.hpp  input.cpp  input.hpp  logging.cpp  logging.hpp  resource_manager.cpp  resource_manager.hpp
phi/core/math/: aggregate_volume.cpp  aggregate_volume.hpp  constants.hpp  noise.cpp  noise.hpp  rng.cpp  rng.hpp  shapes.cpp  shapes.hpp
phi/core/structures/: free_list.hpp  grid_3d.hpp  quadtree.hpp
phi/core/structures/experimental/: array_grid_3d.hpp  hash_grid_3d.hpp  hash_map.hpp
phi/generation/: landmass.cpp  landmass.hpp
phi/graphics/: color.cpp  color.hpp  cubemap.cpp  cubemap.hpp  framebuffer.cpp  framebuffer.hpp  geometry.hpp  gpu_buffer.cpp  gpu_buffer.hpp  indirect.hpp  materials.hpp  mesh.hpp  model.cpp  model.hpp  render_batch.hpp  shader.cpp  shader.hpp  texture_2d.cpp  texture_2d.hpp  vertex.hpp  vertex_attributes.cpp  vertex_attributes.hpp
phi/graphics/materials/: basic_material.cpp  basic_material.hpp
phi/graphics/shaders/: basic_mesh.fs  basic_mesh.vs  global_light_pass.vs  global_light_pass_basic.fs  global_light_pass_basic_ssao.fs  global_light_pass_blinn_phong.fs  global_light_pass_voxel.fs  global_light_pass_voxel_ssao.fs  global_light_pbr.fs  global_light_pbr_ssao.fs  light_scatter.fs  light_transfer.fs  point_light.vs  point_light_basic.fs  point_light_pbr.fs  point_light_voxel.fs  skybox.fs  skybox.vs  ssao_pass.fs  sun.fs  sun.vs  textured_particle_emitter.fs  textured_particle_emitter.vs  tone_map.fs  tone_map_default_fbo.fs  untextured_particle_emitter.fs  untextured_particle_emitter.vs  voxel_mesh.fs  voxel_mesh.vs  voxel_mesh_implicit.fs  voxel_mesh_implicit.vs  voxel_mesh_instanced.fs  voxel_mesh_instanced.vs  voxel_mesh_splat.fs  voxel_mesh_splat.vs  wireframe.fs  wireframe.vs
phi/scene/: node.cpp  node.hpp  scene.cpp  scene.hpp
phi/scene/components/: base_component.cpp  base_component.hpp  camera.cpp  camera.hpp  transform.cpp  transform.hpp
phi/simulation/: voxel_chunk.cpp  voxel_chunk.hpp  voxel_mass.cpp  voxel_mass.hpp  voxel_object.cpp  voxel_object.hpp  voxel_volume.cpp  voxel_volume.hpp  voxel_world.cpp  voxel_world.hpp
phi/voxel/: voxel.cpp  voxel.hpp  voxel_material.cpp  voxel_material.hpp  voxel_object.cpp  voxel_object.hpp  voxel_particle.cpp  voxel_particle.hpp  voxel_world.cpp  voxel_world.hpp
src/: voxel_test.cpp
templates/: new_app.cpp  new_app.hpp
tools/: editor.cpp  editor.hpp  particle_effect_editor.cpp  particle_effect_editor.hpp  pbr_material_editor.cpp  pbr_material_editor.hpp  voxel_editor.cpp  voxel_editor.hpp  voxel_map_editor.cpp  voxel_map_editor.hpp  voxel_object_editor.cpp  voxel_object_editor.hpp  voxel_test.cpp  voxel_test.hpp  voxel_world_editor.cpp  voxel_world_editor.hpp
(+50 files in other folders)
